[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Enemies.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy/World Enemy/World_Bear.gd" type="Script" id=2]
[ext_resource path="res://Assets/Animations/enemy_death.tres" type="Animation" id=3]
[ext_resource path="res://Assets/Animations/damage_anim.tres" type="Animation" id=4]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;


void fragment(){
	
	
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 3.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 4.5 )

[node name="World_Bear" type="KinematicBody2D"]
z_index = 2
collision_layer = 4
collision_mask = 15
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
texture = ExtResource( 1 )
hframes = 9
vframes = 7
frame = 55

[node name="Body_Shape" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1 )
shape = SubResource( 1 )

[node name="Area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 15

[node name="Area_Shape" type="CollisionShape2D" parent="Area"]
position = Vector2( -0.5, 1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Enemy_Animation" type="AnimationPlayer" parent="."]
anims/damage_anim = ExtResource( 4 )
anims/enemy_death = ExtResource( 3 )

[node name="Detect_Player" type="RayCast2D" parent="."]
enabled = true

[node name="Rush_Timer" type="Timer" parent="."]

[node name="Jump_Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Rush_Timer" to="." method="_on_Rush_Timer_timeout"]
